--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "next": "^12.0.8",
     "react-dom": "^17.0.2",
-    "@tokensuite/web3-toolkit": "*"
+    "@tokensuite/web3-toolkit": "*",
+    "ethers": "^5.5.4"
   }
 }
