--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -8,6 +8,8 @@
     "next": "^12.0.8",
     "react-dom": "^17.0.2",
     "@tokensuite/web3-toolkit": "*",
-    "ethers": "^5.5.4"
+    "ethers": "^5.5.4",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7"
   }
 }
