--- a/packages/web3-toolkit/package.json
+++ b/packages/web3-toolkit/package.json
@@ -30,10 +30,12 @@
   },
   "dependencies": {
     "ethers": "^5.5.4",
+    "@web3-react/core": "^6.1.9",
     "@tokensuite/types": "*"
   },
   "peerDependencies": {
     "react": ">=16.8",
-    "ethers": ">=5.0.0"
+    "ethers": ">=5.0.0",
+    "@web3-react/core": ">=6.0.0"
   }
 }
